<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TomatoClock</string>
    <string name="edit_message">任务名称</string>
    <string name="button_send">发送</string>
    <string name="task_name">任务</string>
    <string name="work_time">专注</string>
    <string name="rest_time">放松</string>
    <string name="repetition_times">次数</string>
    <string name="start_btn">开始</string>
    <string name="hint_time">设置需要的时间(单位:分钟)</string>
    <string name="hint_times">设置需要的次数</string>
    <string name="noTaskTime">请设置专注时间</string>
    <string name="working">working</string>
    <string name="relaxing">relaxing</string>
    <string name="tenAndone">10+1</string>
    <string name="twofiveAndfive">25+5</string>
    <string name="thirdtenAndfive">30+5</string>
    <string name="sixtenAndfive">60+5</string>
    <string name="statistics">历史记录</string>
    <string name="task_interrupt">中途退出！</string>
    <string name="task_complete">胜利完成！</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>

    <string-array name="english_week_string_array">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>

    <string-array name="chinese_week_string_array">
        <item>周日</item>
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
    </string-array>

    <string name="list_dialog_title">Dynamic Update</string>

    <string name="func_dialog_title">Function</string>

    <string-array name="list_dialog_items">
        <item>Change week start with sun</item>
        <item>Change week start with mon</item>
        <item>Change week start with sat</item>
        <item>Change select mode：single/default</item>
        <item>Change month and week view with CustomView</item>
        <item>MonthViewShowMode：all</item>
        <item>MonthViewShowMode：only_current</item>
        <item>MonthViewShowMode：fix</item>
    </string-array>

    <string-array name="func_dialog_items">
        <item>Expand CalendarLayout</item>
        <item>Shrink CalendarLayout</item>
        <item>scrollToPre</item>
        <item>scrollToNext</item>
        <item>scrollToCurrent</item>
        <item>Limit calendar range</item>
        <item>Show range</item>
    </string-array>


    <string name="flyme">Flyme</string>
    <string name="flyme_desc">Meizu mobile phone calendar</string>

    <string name="custom_china">Beautiful Chinese style</string>
    <string name="custom_china_desc">Beautiful Chinese style custom</string>

    <string name="full">Full screen style</string>
    <string name="full_desc">If you need a full screen calendar</string>

    <string name="range">Range selection</string>
    <string name="range_desc">Range selection style if you need</string>

    <string name="multi">Multiple selection</string>
    <string name="multi_desc">Multiple selection style if you need</string>

    <string name="colorful">Colorful style</string>
    <string name="colorful_desc">Everything what you need</string>

    <string name="view_pager">ViewPager style</string>
    <string name="view_pager_desc">ViewPager content </string>

    <string name="single">Radio style</string>
    <string name="single_desc">Radio style may be very popular</string>

    <string name="progress">Progress bar style</string>
    <string name="progress_desc">If you are developing a todo application</string>

    <string name="index">Subscript style</string>
    <string name="index_desc">Everything depends on how you draw</string>

    <string name="galaxy">Galaxy style</string>
    <string name="galaxy_desc">So easy to customize</string>

    <string name="simple">Simple style</string>
    <string name="simple_desc">Simple calendar</string>

    <string-array name="lunar_first_of_month">
        <item>春节</item>
        <item>二月</item>
        <item>三月</item>
        <item>四月</item>
        <item>五月</item>
        <item>六月</item>
        <item>七月</item>
        <item>八月</item>
        <item>九月</item>
        <item>十月</item>
        <item>冬月</item>
        <item>腊月</item>
    </string-array>

    <string-array name="tradition_festival">
        <item>除夕</item>
        <item>0101春节</item>
        <item>0115元宵</item>
        <item>0505端午</item>
        <item>0707七夕</item>
        <item>0815中秋</item>
        <item>0909重阳</item>
    </string-array>

    <string-array name="lunar_str">
        <item>初一</item>
        <item>初二</item>
        <item>初三</item>
        <item>初四</item>
        <item>初五</item>
        <item>初六</item>
        <item>初七</item>
        <item>初八</item>
        <item>初九</item>
        <item>初十</item>
        <item>十一</item>
        <item>十二</item>
        <item>十三</item>
        <item>十四</item>
        <item>十五</item>
        <item>十六</item>
        <item>十七</item>
        <item>十八</item>
        <item>十九</item>
        <item>二十</item>
        <item>廿一</item>
        <item>廿二</item>
        <item>廿三</item>
        <item>廿四</item>
        <item>廿五</item>
        <item>廿六</item>
        <item>廿七</item>
        <item>廿八</item>
        <item>廿九</item>
        <item>三十</item>
    </string-array>

    <string-array name="solar_festival" tools:ignore="InconsistentArrays">
        <item>0101元旦</item>
        <item>0214情人节</item>
        <item>0308妇女节</item>
        <item>0312植树节</item>
        <item>0315消权日</item>
        <item>0401愚人节</item>
        <item>0422地球日</item>
        <item>0501劳动节</item>
        <item>0504青年节</item>
        <item>0601儿童节</item>
        <item>0701建党节</item>
        <item>0801建军节</item>
        <item>0910教师节</item>
        <item>1001国庆节</item>
        <item>1031万圣节</item>
        <item>1111光棍节</item>
        <item>1224平安夜</item>
        <item>1225圣诞节</item>
    </string-array>

    <string-array name="solar_term">
        <item>春分</item>
        <item>清明</item>
        <item>谷雨</item>
        <item>立夏</item>
        <item>小满</item>
        <item>芒种</item>
        <item>夏至</item>
        <item>小暑</item>
        <item>大暑</item>
        <item>立秋</item>
        <item>处暑</item>
        <item>白露</item>
        <item>秋分</item>
        <item>寒露</item>
        <item>霜降</item>
        <item>立冬</item>
        <item>小雪</item>
        <item>大雪</item>
        <item>冬至</item>
        <item>小寒</item>
        <item>大寒</item>
        <item>立春</item>
        <item>雨水</item>
        <item>惊蛰</item>
    </string-array>

    <string-array name="special_festivals">
        <item>母亲节</item>
        <item>父亲节</item>
        <item>感恩节</item>
    </string-array>

    <string name="sun">日</string>
    <string name="mon">一</string>
    <string name="tue">二</string>
    <string name="wed">三</string>
    <string name="thu">四</string>
    <string name="fri">五</string>
    <string name="sat">六</string>


    <string-array name="week_string_array">
        <item>日</item>
        <item>一</item>
        <item>二</item>
        <item>三</item>
        <item>四</item>
        <item>五</item>
        <item>六</item>
    </string-array>

    <string-array name="year_view_week_string_array">
        <item>日</item>
        <item>一</item>
        <item>二</item>
        <item>三</item>
        <item>四</item>
        <item>五</item>
        <item>六</item>
    </string-array>

    <string-array name="month_string_array">
        <item>1月</item>
        <item>2月</item>
        <item>3月</item>
        <item>4月</item>
        <item>5月</item>
        <item>6月</item>
        <item>7月</item>
        <item>8月</item>
        <item>9月</item>
        <item>10月</item>
        <item>11月</item>
        <item>12月</item>
    </string-array>

    <integer-array name="trunk_integer_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>

    </integer-array>

    <string-array name="trunk_string_array">
        <item>辛</item>
        <item>壬</item>
        <item>癸</item>
        <item>甲</item>
        <item>乙</item>
        <item>丙</item>
        <item>丁</item>
        <item>戊</item>
        <item>己</item>
        <item>庚</item>
    </string-array>

    <integer-array name="branch_integer_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </integer-array>

    <string-array name="branch_string_array">
        <item>酉</item>
        <item>戌</item>
        <item>亥</item>
        <item>子</item>
        <item>丑</item>
        <item>寅</item>
        <item>卯</item>
        <item>辰</item>
        <item>巳</item>
        <item>午</item>
        <item>未</item>
        <item>申</item>

    </string-array>
</resources>
